# iotics-identity-go

./: .gitignore  .goreleaser.yaml  CONCEPTS.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  go.sum  main.go  main_ctx_test.go  main_high_level_api_test.go  main_test.go
.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md
.github/workflows/: fii.yaml  go.yml  rust.yaml
.lift/: config.toml
docs/ei-559/: go.mod  go.sum  main.go  tc_ei-559.out.1  tc_ei-559.out.2
features/: advanced_identity_api.feature  high_level_identity_api.feature  identity_api.feature
ffi/: Makefile  README.md  build.ps1  ffi_wrapper.go
ffi/dotnet-idsdk/: IoticsIdLibrary.sln  README.md
ffi/java-idsdk/: Makefile  README.md  RELEASES.md  pom.xml
ffi/rust/: .gitignore  Cargo.toml  README.md  build.rs
ffi/rust/examples/: create_auth_token.rs  create_twin_did.rs  create_user_and_agent.rs  delegate_twin_control.rs
ffi/rust/src/: lib.rs
pkg/advancedapi/: advancedApi.go  advancedApi_test.go
pkg/api/: highLevelApi.go  highLevelApi_test.go  regularApi.go  type.go
pkg/crypto/: key_pair_secrets.go  key_pair_secrets_test.go  keys.go  keys_test.go  seed.go  seed_test.go
pkg/identity/: did.go  didType.go  didType_test.go  did_test.go
pkg/proof/: helper.go  proof.go  proof_test.go
pkg/register/: authentication.go  authentication_test.go  document.go  documentBuilder.go  documentHelper.go  documentHelper_test.go  document_test.go  helper.go  issuer.go  issuer_test.go  jwt.go  jwt_test.go  keyType.go  keyType_test.go  metrics.go  registerDelegationProof.go  registerPublicKey.go  (+6 more)
(+40 files in other folders)
