[package]
name = "iotics-identity"
version = "0.1.1"
edition = "2021"
description = "IOTICS Identity SDK"
license = "Apache-2.0"
repository = "https://github.com/Iotic-Labs/iotics-identity-go/tree/main/ffi/rust"
homepage = "https://iotics.com"

[dependencies]
libc = "0.2.139"
thiserror = "1.0"

[build-dependencies]
bindgen = "0.64"
cargo-emit = "0.2"
